--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
         </section>
     </header>
 <main class="main" id="main">
+
     <section class="section1">
         <div class="container">
             <div class="row">
                 <div class="col-sm-5">
                     <div class="sec1-box" id="sec1Box.">
                         
-                        <h2 class="content-heading">Welcome to our Landing Page!</h2>
-                        <p class="sec1box" id="secBox"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta nesciunt distinctio aspernatur ab at earum voluptates consequatur nobis molestias magnam nulla excepturi quo, corporis eum voluptas similique?</p>
-                        <p class="sec1box" id="secBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis iste fugit consequuntur facilis, quo ipsa distinctio eaque error!</p>
+                        <h2 class="content-heading text-light">Welcome to our Landing Page!</h2>
+                        <p class="sec1box text-secondary" id="secBox"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta nesciunt distinctio aspernatur ab at earum voluptates consequatur nobis molestias magnam nulla excepturi quo, corporis eum voluptas similique?</p>
+                        <p class="sec1box text-secondary" id="secBox">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis iste fugit consequuntur facilis, quo ipsa distinctio eaque error!</p>
                         <button class="btn btn-dark">Learn More</button>
                         <button class="btn btn-dark">Download Now</button>
                     </div>
@@ -73,23 +74,23 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="sec2-box" id="sec2Box1">
-                        <h2 class="sec2-subheading">Lorem ipsum dolor</h2>
-                        <p class="sec2-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, at voluptatum. Voluptatem, quibusdam expedita soluta ipsum non accusantium natus facilis unde, veritatis atque obcaecati consequatur fugit dolorem.</p>
-                        <p class="sec2-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugiat cum temporibus neque quae eos necessitatibus iure voluptatibus.</p>
+                        <h2 class="sec2-subheading"><i class="bi bi-cloud-download-fill"></i>Lorem ipsum dolor</h2>
+                        <p class="sec2-text text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, at voluptatum. Voluptatem, quibusdam expedita soluta ipsum non accusantium natus facilis unde, veritatis atque obcaecati consequatur fugit dolorem.</p>
+                        <p class="sec2-text text-secondary ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugiat cum temporibus neque quae eos necessitatibus iure voluptatibus.</p>
                     </div>
                 </div>
                     <div class="col-md-4">
                         <div class="sec2-box" id="sec2Box2">
-                            <h2 class="sec2-subheading">Lorem ispsum dolor</h2>
-                            <p class="sec2-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt cupiditate dolores optio ab dolor repudiandae pariatur at deleniti ex, quos eos eveniet molestias culpa necessitatibus, reprehenderit exercitationem.</p>
-                            <p class="sec2-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus vero sunt ea facilis? Tenetur odit quaerat necessitatibus?</p>
+                            <h2 class="sec2-subheading"><i class="bi bi-chat-right-fill"></i>Lorem ispsum dolor</h2>
+                            <p class="sec2-text text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt cupiditate dolores optio ab dolor repudiandae pariatur at deleniti ex, quos eos eveniet molestias culpa necessitatibus, reprehenderit exercitationem.</p>
+                            <p class="sec2-text text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus vero sunt ea facilis? Tenetur odit quaerat necessitatibus?</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="sec2-box" id="sec2Box3">
-                            <h2 class="sec2-subheading">Lorem ispsum dolor</h2>
-                            <p class="sec2-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt cupiditate dolores optio ab dolor repudiandae pariatur at deleniti ex, quos eos eveniet molestias culpa necessitatibus, reprehenderit exercitationem.</p>
-                            <p class="sec2-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus vero sunt ea facilis? Tenetur odit quaerat necessitatibus?</p>
+                            <h2 class="sec2-subheading"><i class="bi bi-bookmark-star-fill"></i>Lorem ispsum dolor</h2>
+                            <p class="sec2-text text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt cupiditate dolores optio ab dolor repudiandae pariatur at deleniti ex, quos eos eveniet molestias culpa necessitatibus, reprehenderit exercitationem.</p>
+                            <p class="sec2-text text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque necessitatibus vero sunt ea facilis? Tenetur odit quaerat necessitatibus?</p>
                         </div>
                     </div>
             </div>
@@ -99,53 +100,80 @@
     <section class="section" id="mainSection3">
         <div class="container">
             <div class="row">
-                <div class="product-box">
-                    <h2 class="subheading">Checkout our Products!</h2>
-                    <div class="figures">
-                        <div class="row">
-                            <div class="col-sm-6 g-4">
-                                <div class="figure" id="fig1"></div>
-                            </div>
-                            <div class="col-sm-6 g-4">
-                                <div class="figure" id="fig1"></div>
-                            </div>
-                            <div class="col-sm-6 g-4">
-                                <div class="figure" id="fig1"></div>
-                            </div>
-                            <div class="col-sm-6 g-4">
-                                <div class="figure" id="fig1"></div>
+                <div class="col-md-7">
+                    <div class="product-box">
+                        <h2 class="subheading">Checkout our Products!</h2>
+                        <div class="figures">
+                            <div class="row">
+                                <div class="col-sm-6 g-4">
+                                    <div class=" figure mx-auto" id="fig1"></div>
+                                </div>
+                                <div class="col-sm-6 g-4">
+                                    <div class="figure mx-auto" id="fig2"></div>
+                                </div>
+                                <div class="col-sm-6 g-4">
+                                    <div class="figure mx-auto" id="fig3"></div>
+                                </div>
+                                <div class="col-sm-6 g-4">
+                                    <div class="figure mx-auto" id="fig3"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            <div class="col-md-4">
                 <div class="client-box">
                     <div class="row justify-content-end">
-                    <div class="col-md-5">
                             <h2 class="sec-4">What our clients are saying...</h2>
-                            <ul class="comit">
-                                <li>
+                            <ul class="com">
+                                <li class="list-unstyled">
                                     <p class="sec4-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam dignissimos aut labore, commodi magni quidem harum pariatur voluptates consequatur, omnis ipsum accusamus mollitia ad veniam <span class="bold">John Smith</span></p>
                                 </li>
-                                <li>
+                                <li class="list-unstyled">
                                     <p class="sec4-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam dignissimos aut labore, commodi magni quidem harum pariatur voluptates consequatur, omnis ipsum accusamus mollitia ad veniam <span class="bold">John Smith</span></p>
                                 </li>
-                                <li>
+                                <li class="list-unstyled">
                                     <p class="sec4-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aperiam dignissimos aut labore, commodi magni quidem harum pariatur voluptates consequatur, omnis ipsum accusamus mollitia ad veniam <span class="bold">John Smith</span></p>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
-            </div>
         </div>
-    </section>
+    </div>
+</section>
+</main>
 
 
     <footer class="footer" id="footer">
         <section class="section" id="footerSection1">
             <div class="container">
-                <p class="fs1-text"> Copyright&copy;2012 bloom Web Sesign &middot; all rights reserved</p>
-                
+                <div class="row">
+                    <div class="col">
+                        <p class="fs1-text"> Copyright&copy;2012 bloom Web Sesign &middot; all rights reserved</p>
+                    </div>
+                    <div class="col-md-3">
+                        <nav class="nav" id="topSocialNav">
+                            <ul class="social-list d-flex" id="topSocialList">
+                                <li class="social-item">
+                                    <a href="#">
+                                        <span class="nav-link header-link"><i class="bi bi-facebook"></i></span>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#">
+                                        <span class="nav-link header-link"><i class="bi bi-twitter-x"></i></span>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href="#">
+                                        <span class="nav-link header-link"><i class="bi bi-instagram"></i></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
             </div>
         </section>
     </footer>
